--- a/index.css
+++ b/index.css
@@ -4,9 +4,30 @@ body {
     --bs-body-line-height: 1.4;
     --bs-body-bg: var(--bs-gray-100);
   }
-  
-  .table {
-    --bs-table-color: var(--bs-gray-600);
-    --bs-table-bg: var(--bs-gray-100);
-    --bs-table-border-color: transparent;
-  }
+.form-check-label {
+  font-family: 'Prompt', sans-serif;
+}
+.alert {
+  font-family: 'Prompt', sans-serif;
+}
+/* CSS Reset */
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.top-banner {
+  overflow-x: hidden;
+  text-align: center;
+  color: white;
+  background-color: black;
+  margin-bottom: 0.25em;
+}
